# fluxe

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build.py  engine.h  engine.md  engine.mm  engine.win.cc  fetchDependencies.lua  haxelib.json  premake5.lua  prepare.py  publish.py
animation/: Timer.hx
events/: ActionEventsManager.hx  FocusManager.hx  IEventListener.hx  KeyEventsManager.hx  MouseEventsManager.hx  PressEvent.hx
examples/canvas/: canvas.win.cc  canvasExample.cc  mac.mm  win.cc
examples/layouts/: Layout.hx  layout.hxml  main.cpp
examples/paths/: Paths.hx  layout.hxml  main.cpp
examples/render_backend/: mac.mm  renderExample.cc
examples/textAndButton/: TextAndButton.hx  textAndButton.hxml
examples/text_and_button/: TextAndButton.hx  main.cpp  textAndButton.hxml
examples/window/: mac.mm  win.cc
fluxe/animation/: Timer.hx
fluxe/events/: ActionEventsManager.hx  ClipboardManager.cc  ClipboardManager.h  FocusManager.cc  FocusManager.h  FocusManager.hx  IEventListener.cc  IEventListener.h  IEventListener.hx  KeyEventsManager.hx  KeyboardEventsManager.cc  KeyboardEventsManager.h  MouseEvents.h  MouseEventsManager.cc  MouseEventsManager.h  MouseEventsManager.hx  PressEvent.cc  PressEvent.h  PressEvent.hx
fluxe/layout/: FlexLayout.cc  FlexLayout.h  FlexLayout.hx  ILayout.h  ILayout.hx  ILayoutObject.cc  ILayoutObject.h  ILayoutObject.hx  LayoutConstraint.h  LayoutConstraint.hx  LayoutConstraintSetter.cc  LayoutConstraintSetter.h  LayoutPosition.hx  LayoutSize.hx  LayoutTypes.h  LayoutTypes.hx  Padding.h  Padding.hx  StackLayout.cc  StackLayout.h  StackLayout.hx
fluxe/misc/: Nullable.h  Object.h
fluxe/misc/__test__/: CastTest.cc  ReferenceCounterTest.cc  ReferenceCounterTreeTest.cc
fluxe/render_pipeline/: RenderPipeline.cc  RenderPipeline.h  RenderPipeline.hx  RenderStrategy.cc  RenderStrategy.h  RenderStrategy.hx
fluxe/views/: Build.hx  Button.cc  Button.h  Button.hx  CheckBox.cc  CheckBox.h  Color.cc  Color.h  ContextMenu.cc  ContextMenu.h  Engine.hx  EngineUtility.cc  EngineUtility.h  Externs.hx  FontManager.cc  FontManager.h  ScrollView.hx  Select.cc  Select.h  Text.cc  Text.h  Text.hx  TextInput.cc  TextInput.h  TextInput.hx  View.cc  View.h  View.hx  ViewBuilder.cc  ViewBuilder.h  ViewBuilder.hx  ViewManager.cc  ViewManager.h  ViewManager.hx  ViewsContainer.cc  ViewsContainer.h
layout/: ILayout.hx  ILayoutObject.hx  LayoutConstraint.hx  LayoutPosition.hx  LayoutSize.hx  Padding.hx  StackLayout.hx
render_backend/skia/: canvas.cc  canvas.h  image.cc  image.h  paint.cc  paint.h  path.cc  path.h  picture.cc  picture.h  picture_recorder.cc  picture_recorder.h  rrect.h  vertices.cc  vertices.h
render_pipeline/: RenderPipeline.hx  RenderStrategy.hx
shell/: callbacks.h  clipboard.h  timer.h
shell/mac/: canvasView.h  canvasView.mm  clipboard.h  clipboard.mm  platformView.h  platformView.mm  platformWindow.h  platformWindow.mm  timer.mm
shell/win/: clipboard.cc  platformView.cc  platformView.h  platformWindow.cc  platformWindow.h  timer.cc  timer.h
views/: Build.hx  Button.hx  Externs.hx  RenderStrategy.hx  ScrollView.hx  Text.hx  TextInput.hx  View.hx  ViewBuilder.hx  ViewManager.hx
